Add bootstrap-vue to dependencies
`npm install --save bootstrap-vue`

--- a/norris-vue/package.json
+++ b/norris-vue/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap-vue": "^2.0.0-rc.1",
     "vue": "^2.5.2",
     "vue-js-toggle-button": "^1.2.2",
     "vue-router": "^3.0.1"
