--- a/norris-vue/package.json
+++ b/norris-vue/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap-vue": "^2.0.0-rc.1",
+    "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
     "vue-js-toggle-button": "^1.2.2",
     "vue-router": "^3.0.1"
